--- a/src/app/views/account/equipments/add/add.html
+++ b/src/app/views/account/equipments/add/add.html
@@ -163,8 +163,8 @@
             <hr>
 
             <div class="from-group block">
-                <button type="submit" class="button btn-medium orange" ng-click="add()">{{editMode ? 'SAVE' : 'ADD EQUIPMENT'}}</button>
-                <button class="button btn-medium silver" ui-sref="main.account.equipments.list">CANCEL</button>
+                <button type="submit" class="btn all-btn" ng-click="add()">{{editMode ? 'SAVE' : 'ADD EQUIPMENT'}}</button>
+                <button class="btn all-btn cancel-btn" ui-sref="main.account.equipments.list">CANCEL</button>
             </div>
 
         </div>
