--- a/src/app/views/account/equipments/equipments.html
+++ b/src/app/views/account/equipments/equipments.html
@@ -46,7 +46,7 @@
                     </div>
                     <div class="description" ui-sref="main.account.favourites">
                         <i class="icon soap-icon-longarrow-right"></i>
-                        <span>View Favourited Equipments</span>
+                        <span>View Favourited</span>
                     </div>
                 </div>
             </a>
