--- a/src/app/views/account/favorites/favorites.html
+++ b/src/app/views/account/favorites/favorites.html
@@ -11,8 +11,8 @@
             <h4 class="box-title">
                 <i class="icon soap-icon-heart yellow-color"></i>{{pro.name}}
             </h4>
-            <button class="btn-mini status" ui-sref="main.equiDetails({id:pro.id})">View</button>
-            <button class="btn-mini status">Unfavourite</button>
+            <button class="btn all-btn status" ui-sref="main.equiDetails({id:pro.id})">View</button>
+            <button class="btn all-btn status">Unfavourite</button>
         </div>
 
     </div>
