--- a/src/app/views/account/inventory/add/add.html
+++ b/src/app/views/account/inventory/add/add.html
@@ -42,8 +42,8 @@
             <hr>
             <br />
             <div class="from-group block">
-                <button type="submit" class="button btn-medium orange">Save Inventory</button>
-                <button class="button btn-medium silver" ui-sref="main.account.inventory.list">CANCEL</button>
+                <button type="submit" class="btn all-btn">Save Inventory</button>
+                <button class="btn all-btn cancel-btn" ui-sref="main.account.inventory.list">CANCEL</button>
             </div>
         </div>
     </form>
