--- a/src/app/views/account/invoices/list/list.html
+++ b/src/app/views/account/invoices/list/list.html
@@ -19,8 +19,8 @@
         </h5>
 
 
-        <button class="btn-mini status" process-indicator  ng-click="invoicesMdl.pay(inv)">Pay Now</button>
-        <button class="btn-mini status" ui-sref="main.account.invoices.view({id:inv.id})">View Details</button>
+        <button class="btn all-btn status" process-indicator  ng-click="invoicesMdl.pay(inv)">Pay Now</button>
+        <button class="btn all-btn status" ui-sref="main.account.invoices.view({id:inv.id})">View Details</button>
     </div>
 </div>
 </div>
