--- a/src/app/views/account/jobsites/list/list.html
+++ b/src/app/views/account/jobsites/list/list.html
@@ -1,5 +1,5 @@
 
-<h2>Manage Your Jobsites <button class="btn-mini status pull-right add-button" ui-sref="main.account.jobsites.add">Add Jobsite</button></h2>
+<h2>Manage Your Jobsites <button class="btn all-btn pull-right status" ui-sref="main.account.jobsites.add">Add Jobsite</button></h2>
 <!--<div class="filter-section gray-area clearfix">
     <form>
         <label class="radio radio-inline" ng-class="{'checked':listEquiMdl.filter=='all'}" ng-click="listEquiMdl.updateFilter('all')">
@@ -32,8 +32,8 @@
             <dd>3</dd>
         </dl>-->
 
-        <button class="btn-mini status" ng-click="delete(site)">Archive</button>
-        <button class="btn-mini status" ui-sref="main.account.jobsites.edit({id:site.id})">Edit</button>
+        <button class="btn all-btn status" ng-click="delete(site)">Archive</button>
+        <button class="btn all-btn status" ui-sref="main.account.jobsites.edit({id:site.id})">Edit</button>
     </div>
 
 </div>
