--- a/src/app/views/account/profile/view/view.html
+++ b/src/app/views/account/profile/view/view.html
@@ -1,8 +1,8 @@
 <div class="view-profile">
     <article class="image-box style2 box innerstyle personal-details">
         <div >
-            <a style="margin:0px 5px" ui-sref="main.account.profile.edit" class="button btn-mini pull-right edit-profile-btn">EDIT PROFILE</a>
-            <a ui-sref="main.account.profile.changePassword" class="button btn-mini pull-right edit-profile-btn">CHANGE PASSWORD</a>
+            <button style="margin:0px 5px" ui-sref="main.account.profile.edit" class="btn pull-right all-btn">EDIT PROFILE</button>
+            <button ui-sref="main.account.profile.changePassword" class="btn pull-right all-btn">CHANGE PASSWORD</button>
             <h2 class="box-title fullname">{{mdl.user.fullname}}</h2>
             <dl class="term-description col-lg-6">
                 <dt>user name:</dt><dd>{{mdl.user.email}}</dd>
