--- a/src/app/views/seller-account/invoices/list/list.html
+++ b/src/app/views/seller-account/invoices/list/list.html
@@ -22,7 +22,7 @@
             <h5 class="box-title col-md-2 col-lg-offset-1">
                 <i class="icon yellow-color circle"></i>${{item.total}}
             </h5>
-            <button class="btn-mini status" ui-sref="main.sellerAccount.invoices.view({id:item.id})">View Details</button>
+            <button class="btn all-btn pull-right" ui-sref="main.sellerAccount.invoices.view({id:item.id})">View Details</button>
         </div>
     </div>
 </div>
