--- a/src/app/views/seller-account/invoices/view/view.html
+++ b/src/app/views/seller-account/invoices/view/view.html
@@ -69,8 +69,8 @@
             <div class="price"><div class="price-per-unit">${{mdl.item.total}}</div></div>
         </div>
     </div>
-    <button class="button green btn-large uppercase pull-left">Back to Invoice List</button>
-    <button class="button green btn-large uppercase pull-right">Download PDF</button>
-    <button style="margin-right:4px;" class="button green btn-large uppercase pull-right green-bg" ui-sref="main.sellerAccount.invoices.edit({id:0})">Edit Invoice</button>
+    <button class="btn all-btn uppercase pull-left">Back to Invoice List</button>
+    <button class="btn all-btn uppercase pull-right">Download PDF</button>
+    <button style="margin-right:4px;" class="btn all-btn uppercase pull-right" ui-sref="main.sellerAccount.invoices.edit({id:0})">Edit Invoice</button>
 </div>
 
