--- a/src/app/style/sass/_base.scss
+++ b/src/app/style/sass/_base.scss
@@ -29,7 +29,7 @@
     zoom: 1;
 }
 html { font-size: 16px; min-height: 100%; }
-body { font:75%/150% $font-stack; background-color: #fff; color:$primary-color; overflow-x: hidden; -webkit-font-smoothing: antialiased; -ms-overflow-style: scrollbar; oveflow-y: scroll; }
+body { font:75%/150% $font-stack; background-color: #fff; color:$primary-color; overflow-x: hidden; -webkit-font-smoothing: antialiased; -ms-overflow-style: scrollbar; oveflow-y: scroll; font-weight: 400;}
 
 iframe, img { border:0; }
 
