--- a/src/app/views/account/jobsites/add/add.html
+++ b/src/app/views/account/jobsites/add/add.html
@@ -84,8 +84,8 @@
                 <button class="btn-medium btn-default col-sms-6 col-sm-4" ui-sref="main.account.jobsites.list">CANCEL</button>
             </div>-->
             <div class="from-group block" style="margin-top: 20px;">
-                <button type="submit" class="button btn-medium orange " ng-click="add()">{{editMode ? 'SAVE' : 'ADD JOBSITE'}}</button>
-                <button class="button btn-medium silver" ui-sref="main.account.jobsites.list">CANCEL</button>
+                <button type="submit" class="btn all-btn" ng-click="add()">{{editMode ? 'SAVE' : 'ADD JOBSITE'}}</button>
+                <button class="btn all-btn cancel-btn" ui-sref="main.account.jobsites.list">CANCEL</button>
             </div>
 
         </div>
