--- a/src/app/views/account/orders/list/list.html
+++ b/src/app/views/account/orders/list/list.html
@@ -18,9 +18,9 @@
             <i class="icon yellow-color circle"></i>${{order.total | number}}
         </h4>
 
-        <button class="btn-mini status" ui-sref="main.account.orders.view({id:order.id})">Details</button>
-        <button class="btn-mini status" ui-sref="main.account.orders.list">Cancel</button>
-        <button class="btn-mini status" ui-sref="main.account.orders.list">Return</button>
+        <button class="btn all-btn status" ui-sref="main.account.orders.view({id:order.id})">Details</button>
+        <button class="btn all-btn status" ui-sref="main.account.orders.list">Cancel</button>
+        <button class="btn all-btn status" ui-sref="main.account.orders.list">Return</button>
     </div>
 
 
