--- a/src/app/views/account/profile/change-password/change-password.html
+++ b/src/app/views/account/profile/change-password/change-password.html
@@ -33,8 +33,8 @@
 
 
             <div class="from-group">
-                <button type="submit" ng-click="changePassword()" class="btn-medium col-sms-6 col-sm-4">CHANGE</button>
-                <button ui-sref="main.account.profile.view" class="btn-medium btn-default col-sms-6 col-sm-4">CANCEL
+                <button type="submit" ng-click="changePassword()" class="btn all-btn">CHANGE</button>
+                <button ui-sref="main.account.profile.view" class="btn all-btn cancel-btn">CANCEL
                 </button>
             </div>
 
