--- a/src/app/views/payment/payment.html
+++ b/src/app/views/payment/payment.html
@@ -1,4 +1,19 @@
-
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 progress-bar-col">
+        <ul class="progress-indicator">
+            <li class="completed">
+                <span class="bubble"></span>
+                <p>1. Delivery</p>
+            </li>
+            <li class="active">
+                <span class="bubble"></span>
+                <p>2. Payment</p>
+            </li>
+            <li class="">
+                <span class="bubble"></span>
+                <p>3. Complete</p>
+            </li>
+        </ul>
+    </div>
 <div>
     <form name="payment" id="braintree-payment-form" ng-submit="mdl.pay()">
         <h2>Braintree Payment Form</h2>
