--- a/src/app/views/seller-account/settings/additional-charges/additional-charges.html
+++ b/src/app/views/seller-account/settings/additional-charges/additional-charges.html
@@ -1,5 +1,34 @@
 <h5 class="skin-color">Additional Charges</h5>
-<div class="row form-group">
+<table class="table additional-charges-table">
+  <thead>
+    <tr>
+      <th>Charge Name</th>
+      <th>Value</th>
+      <th>Unit</th>
+      <th>Item Kind</th>
+      <th>Category</th>
+      <th></th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr ng-repeat="charge in chargesMdl.charges" ng-if="!charge.edit">
+      <td>{{charge.name}}</td>
+      <td>{{charge.value}}</td>
+      <td>{{charge.unit}}</td>
+      <td>{{charge.item_kind}}</td>
+      <td class="category">{{charge.categoryNames.join(',\n')}}</td>
+      <td>
+        <button class="btn all-btn" ng-click="chargesMdl.edit(charge)">Edit</button>
+      </td>
+      <td>
+        <button class="btn all-btn" ng-click="chargesMdl.delete(charge)">Delete</button>
+      </td>
+    </tr>
+  </tbody>
+</table>
+<hr>
+<!-- <div class="row form-group">
     <div class="col-xs-6 col-sm-2 col-md-2">
         <label>Charge Name</label>
     </div>
@@ -15,9 +44,9 @@
     <div class="col-xs-6 col-sm-3 col-md-2">
         <label>Category</label>
     </div>
-</div>
+</div> -->
 <div ng-repeat="charge in chargesMdl.charges" class="row form-group light-fonts">
-    <div ng-if="!charge.edit">
+    <!-- <div ng-if="!charge.edit">
         <div class="col-xs-6 col-sm-2 col-md-2">
             <label>{{charge.name}}</label>
         </div>
@@ -34,12 +63,12 @@
             <label>{{charge.categoryNames.join(',\n')}}</label>
         </div>
         <div class="col-xs-6 col-sm-3 col-md-1">
-            <button class="button btn-mini uppercase green" ng-click="chargesMdl.edit(charge)">Edit</button>
+            <button class="btn all-btn" ng-click="chargesMdl.edit(charge)">Edit</button>
         </div>
         <div class="col-xs-6 col-sm-3 col-md-1">
-            <button class="button btn-mini uppercase red" ng-click="chargesMdl.delete(charge)">Delete</button>
+            <button class="btn all-btn" ng-click="chargesMdl.delete(charge)">Delete</button>
         </div>
-    </div>
+    </div> -->
     <div ng-if="charge.edit">
         <form novalidate validate-form="validateEditForm" name="chargesMdl.editForm">
 
@@ -65,19 +94,20 @@
                 </select>
             </div>
             <div class="col-xs-6 col-sm-3 col-md-2">
-                <tags-input ng-model="chargesMdl.selectedCatsToEdit">
+                <tags-input ng-model="chargesMdl.selectedCatsToEdit" class="edit-tags-directive">
                     <auto-complete min-length="1" load-on-focus="'true'" debounce-delay="'0'"
                                    source="chargesMdl.categories"></auto-complete>
                 </tags-input>
             </div>
             <div class="col-xs-6 col-sm-3 col-md-1">
-                <button class="btn-small uppercase" ng-click="chargesMdl.update(charge)">Update</button>
-                <button class="btn-small uppercase" ng-click="chargesMdl.cancelEdit(charge)">Cancel</button>
+                <button class="btn all-btn auto-width update-btn" ng-click="chargesMdl.update(charge)">Update</button>
+                <br>
+                <button class="btn all-btn auto-width" ng-click="chargesMdl.cancelEdit(charge)">Cancel</button>
             </div>
         </form>
     </div>
 </div>
-
+<hr>
 <div class="row form-group">
     <form novalidate validate-form="validateAddForm" name="chargesMdl.addForm">
 
@@ -100,13 +130,13 @@
             </select>
         </div>
         <div class="col-xs-6 col-sm-3 col-md-2">
-            <tags-input ng-model="chargesMdl.selectedCatsToAdd">
+            <tags-input ng-model="chargesMdl.selectedCatsToAdd" class="tags-directive form-control">
                 <auto-complete min-length="1" load-on-focus="'true'" debounce-delay="'0'"
                                source="chargesMdl.categories"></auto-complete>
             </tags-input>
         </div>
         <div class="col-xs-6 col-sm-3 col-md-1">
-            <button class="button btn-mini uppercase green" style="width: auto" ng-click="chargesMdl.add()">Add</button>
+            <button class="btn all-btn auto-width" ng-click="chargesMdl.add()">Add</button>
         </div>
     </form>
 
